--- a/vignettes/dandelionR.Rmd
+++ b/vignettes/dandelionR.Rmd
@@ -203,6 +203,7 @@ We can visualise this milo object using UMAP.
 ```{r, warning = FALSE}
 milo_object <- miloUmap(milo_object, n_neighbors = 30)
 ```
+
 ```{r}
 plotUMAP(milo_object,
     color_by = "anno_lvl_2_final_clean",
@@ -316,7 +317,7 @@ is inverse of the size of the pseudobulk.
 
 ## Project pseudobulk data to each cell
 ```{r}
-cdata <- projectPseudotimeToCell(milo_object, pb.milo, branch.tips)
+cdata <- projectPseudotimeToCell(milo_object, pb.milo, value_key = c("pseudotime", "CD8+T", "CD4+T"))
 ```
 
 ## Visualise the trajectory data on a per cell basis
